# Productivity-Tracker

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 8ca242fbad48_init_performance_standards.py  d2c76908763c_init_activity_categories.py
app/core/: clients.py  config.py  database.py
app/middlewares/: auth.py  rbac.py
app/models/: __init__.py  activity_cateories.py  performance_standards.py
app/routers/: activity_categories.py  auth.py  performance_standards.py  test.py  user.py
app/services/auth/: auth.py
app/services/auth/schemas/: register.py
app/services/master/: activity_categories_svc.py  performance_standards_dto.py
app/services/master/schemas/: activity_categories_dto.py  performance_standards_dto.py
app/services/user/: user.py
app/services/user/schemas/: change_password.py  profile.py
app/utils/: base_model.py
app/utils/response/: exception.py  response.py
